# DigitalDataProcessing

./: .gitignore  CMakeLists.txt  Makefile  gmon.out  toolchain-aarch64.cmake
img/: Dennis.pgm
src/: canny_edge.c  canny_edge_speedup.c  hysteresis_speedup.c  image_compare.c  pgm_io.c
